--- a/DariTn/Views/FurnitureAdvs/Details2.cshtml
+++ b/DariTn/Views/FurnitureAdvs/Details2.cshtml
@@ -12,13 +12,13 @@
     <hr />
     <dl class="dl-horizontal">
         <div id="selling" class="second-theme-selling">
-            <div class="tab-content container-fluid" style="width:700px;height:500px">
+            <div class="tab-content container-fluid" style="width:700px;height:700px">
                 <div id="tab-villa" class="tab-pane active container">
                     <div class="row">
 
                         <div class="col-xs-12 col-sm-6 col-md-3" style="margin-left:200px">
                             <div class="sub-box">
-                                <img class="img-responsive" src="img/selling-img/sel-img1.jpg" />
+                                <img class="img-responsive" src="~/img/selling-img/meb.jpg" />
                                 <div class="sub-box-content">
                                     <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Ref: </a>@Html.DisplayFor(model => model.@ref)</h4>
                                     <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Name: </a> @Html.DisplayFor(model => model.name)</h4>
