--- a/DariTn/Views/FurnitureAdvs/IndexAdmin.cshtml
+++ b/DariTn/Views/FurnitureAdvs/IndexAdmin.cshtml
@@ -21,7 +21,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-3">
                             <div class="sub-box">
-                                <img class="img-responsive" src="img/selling-img/sel-img1.jpg" />
+                                <img class="img-responsive" src="~/img/selling-img/meb.jpg" />
                                 <div class="sub-box-content">
                                     <h5 style="color:#313030"> <a style="color:#000000; font-size:20px">Ref: </a> @Html.DisplayFor(modelItem => item.@ref)</h5>
                                     <h5 style="color:#313030"><a style="color:#000000; font-size:20px"> @Html.DisplayFor(modelItem => item.name): </a> @Html.DisplayFor(modelItem => item.description) </h5>
