--- a/DariTn/Views/FurnitureAdvs/DetailsAdmin.cshtml
+++ b/DariTn/Views/FurnitureAdvs/DetailsAdmin.cshtml
@@ -15,7 +15,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="sub-box">
-                <img class="img-responsive" src="img/selling-img/sel-img1.jpg" />
+                <img class="img-responsive" src="~/img/selling-img/meb.jpg" />
                 <div class="sub-box-content">
                     <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Ref: </a>@Html.DisplayFor(model => model.@ref)</h4>
                     <h4 style="color:cornflowerblue"> <a style="color:#000000; font-size:22px"> Name: </a> @Html.DisplayFor(model => model.name)</h4>
