--- a/DariTn/Views/Banks/Index.cshtml
+++ b/DariTn/Views/Banks/Index.cshtml
@@ -6,7 +6,6 @@
 }
 
 <h2>Index</h2>
-
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -16,6 +15,7 @@
             @Html.DisplayNameFor(model => model.name)
         </th>
         <th>Formulas</th>
+        <th>Actions</th>
     </tr>
 
     @foreach (var item in Model)
@@ -36,6 +36,10 @@
                         <tr>
                             <td>@Html.DisplayFor(modelItem => item.CreditFormulas.ElementAt(i).duration)</td>
                             <td>@Html.DisplayFor(modelItem => item.CreditFormulas.ElementAt(i).interestRate)</td>
+                            <td>
+                                @Html.ActionLink("Edit", "EditFormula", new { id = item.CreditFormulas.ElementAt(i).id }) |
+                                @Html.ActionLink("Delete", "DeleteFormula", new { id = item.CreditFormulas.ElementAt(i).id })
+                            </td>
                         </tr>
                     }
                 </table>
@@ -43,6 +47,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.id }) |
+                @Html.ActionLink("New Formula", "AddFormula", new { id = item.id })
             </td>
         </tr>
     }
