--- a/DariTn/Views/AssetAdvs/Create.cshtml
+++ b/DariTn/Views/AssetAdvs/Create.cshtml
@@ -30,14 +30,14 @@
     </div>
 
     <div class="form-group">
-        <div class="control-label col-md-2">Type: (<b>Apartment</b>, <b>House</b>, <b>Land</b>, <b>Office</b>)</div>
+        <div class="control-label col-md-2">Is this property for <b>Rent</b> or <b>Sale</b></div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.type, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        <div class="control-label col-md-2">Is this property for <b>Rent</b> or <b>Sale</b> ? </div>
+        <div class="control-label col-md-2">Category: (<b>Apartment</b>, <b>House</b>, <b>Land</b>, <b>Office</b>)</div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.category, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
