--- a/DariTn/Views/Complaints/Create.cshtml
+++ b/DariTn/Views/Complaints/Create.cshtml
@@ -17,7 +17,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Description: (Why do you want to file a complaint on this Asset)</div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
