--- a/DariTn/Views/AssetAdvs/Details.cshtml
+++ b/DariTn/Views/AssetAdvs/Details.cshtml
@@ -125,6 +125,7 @@
 
             @Html.ActionLink(linkText: "TimeSlots", actionName: "Index", controllerName: "TimeSlots", routeValues: new { id = Model.id }, htmlAttributes: new { @class = "btn btn-primary btn-lg" })
 
+            @Html.ActionLink(linkText: "Deposit Guarantee", actionName: "AddGuarantee", controllerName: "AssetAdvs", routeValues: new { id = Model.id }, htmlAttributes: new { @class = "btn btn-primary btn-lg" })
         </div>
 
     </div>
